<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/main_back"
        android:id="@id/Main_Menu_Layout">

        <GridLayout
            android:layout_width="280dp"
            android:layout_height="292dp"
            android:layout_gravity="center">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_lamp"
                android:id="@id/btn_Menu_lamp"
                android:layout_row="1"
                android:layout_column="0" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_air"
                android:id="@id/btn_Menu_air"
                android:layout_row="3"
                android:layout_column="0" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_wash"
                android:id="@+id/btn_Menu_wash"
                android:layout_row="4"
                android:layout_column="0" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_account"
                android:id="@id/btn_Menu_account"
                android:layout_row="5"
                android:layout_column="0" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_tv"
                android:id="@id/btn_Menu_tv"
                android:layout_row="2"
                android:layout_column="0" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_ref"
                android:id="@id/btn_Menu_ref"
                android:layout_row="0"
                android:layout_column="0" />

        </GridLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView"
        android:layout_gravity="right|center_vertical" />
</LinearLayout>